2012-08-18  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Makefile.am, music/event_routing_map.hh, event_routing_map.cc,
	music/connector.hh, music/port.hh: Renamed
	event_routingmap.{cc,hh} -> event_routing_map.{cc,hh}.

	* music/interval_tree.hh: Optimized memory usage.

2012-08-17  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music/index_map.hh, music/interval.hh: Removed clone().

	* connector.cc, music/event_router.hh, event_router.cc,
	event_routingmap.cc, music/event.hh: Removal of indirection and
	virtual pointers for IndexProcessors.

	* music/event_router, event_router.cc: Removed unused member Data ().

	* interval.hh, music/event_router.hh, event_router.cc,
	event_routingmap.cc: Simplifications enabled by previous changes.

	* music/event_router.hh, event_router.cc: Removed indirection
	(pointer) to EventRoutingData from the IntervalTree through the
	use of templates.

	* port.cc: Let type dispatch happen here instead of in the
	interval tree.

	* event_routingmap.cc: Formatting.

	* music/collector.hh, collector.cc, music/distributor.hh,
	distributor.cc: Reverted to old use of interval_tree.

	* music/interval_tree.hh: Reverted to version in trunk, but with
	an added assignment operator.

2012-08-17  Mikael Djurfeldt  <mdj@djurfeldt.com>

	* application_map.cc (ApplicationMap::read): Only create file
	"leaders" if MUSIC_DEBUGGING is defined.

	* configuration.cc (Configuration::getEnv): Handle the case where
	the MUSIC configuration variable is not present (launched without
	MUSIC) properly.

2012-08-13  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* scheduler.cc (Scheduler::Node::advance): Define time variable
	only if debugging. Formatting changes.

	* music/data_map.hh (~DataMap::DataMap), music/event_router.hh
	(~IndexProcessor::IndexProcessor), music/index_map.hh
	(~IndexMap::IndexMap)
	(~IndexMap::IteratorImplementation::IteratorImplementation),
	music/interval.hh (~Interval::Interval), music/spatial.hh