@@ -45,13 +45,13 @@ namespace MUSIC {
       void setLength (int length) { setEnd (length); }
     };
 private:
-    class IntervalCalculator : public IntervalTree<int, IndexInterval>::Action {
+    class IntervalCalculator : public IntervalTree<int, MUSIC::Interval, int>::Action {
       Interval& interval_;
       int elementSize_;
     public:
       IntervalCalculator (Interval& interval, int elementSize)
 	: interval_ (interval), elementSize_ (elementSize) { };
-      void operator() (IndexInterval& indexInterval);
+      void operator() (int& offset);
     };
     
     typedef std::vector<Interval> Intervals;
@@ -61,7 +61,7 @@ private:
     int maxsize_;
     BufferMap buffers;
 
-    IntervalTree<int, IndexInterval>* buildTree ();
+    IntervalTree<int, MUSIC::Interval, int>* buildTree ();
   public:
     // caller manages deallocation but guarantees existence
     /* remedius
