@@ -1,5 +1,10 @@
 2012-08-18  Mikael Djurfeldt  <mikael@djurfeldt.com>
 
+	* music/interval_tree.hh, music/collector.hh, collector.cc,
+	music/distributor.hh, distributor.cc, event_routing_map.cc:
+	Separated the template DataType parameter of IntervalTree into
+	IntervalType and DataType.
+
 	* Makefile.am, music/event_routing_map.hh, event_routing_map.cc,
 	music/connector.hh, music/port.hh: Renamed
 	event_routingmap.{cc,hh} -> event_routing_map.{cc,hh}.
